--- a/src/includes/shared/_figures.scss
+++ b/src/includes/shared/_figures.scss
@@ -8,6 +8,9 @@
   font-weight: normal;
   text-align: center;
   text-indent: 0;
+  .italic {
+    font-style: normal;
+  }
 }
 
 $full-width:  90%;
