--- a/src/includes/shared/_overrides.scss
+++ b/src/includes/shared/_overrides.scss
@@ -23,6 +23,12 @@
   .float-right {
     @include figure-full();
   }
+
+  /* Display paragraphs as left-aligned
+     in smaller viewports. */
+  p {
+    text-align: left;
+  }
 }
 
 
