--- a/src/includes/shared/_text-inline.scss
+++ b/src/includes/shared/_text-inline.scss
@@ -4,10 +4,16 @@
 
 .bold {
   font-weight: bold;
+  .bold {
+    font-weight: bold;
+  }
 }
 
 .italic {
   font-style: italic;
+  .italic {
+    font-style: normal;
+  }
 }
 
 .bold-italic {
