--- a/src/paragraph.scss
+++ b/src/paragraph.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     paragraph.css
- * VERSION:  2017-03-31
+ * VERSION:  2017-04-19
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -279,6 +279,9 @@ td {
   font-style: italic;
   margin: 1em 10%;
   padding: 0;
+  .italic {
+    font-style: normal;
+  }
 }
 
 
