--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     mywsb.css
- * VERSION:  2017-04-19
+ * VERSION:  2017-04-22
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -100,6 +100,10 @@ img {
   width: 100%;
 }
 
+ol,
+ul {
+  -webkit-padding-start: 0;
+}
 
 
 
