--- a/src/verse.scss
+++ b/src/verse.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     verse.css
- * VERSION:  2017-04-22
+ * VERSION:  2017-06-02
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -161,6 +161,29 @@ $level-6-font: italic bold 0.9em $sans-font;
 
   img {
     margin: 0 5%;
+    width: 100%;
+  }
+}
+
+/*
+ * Classes for use with figure
+ */
+
+.float-right {
+  float: right;
+  @include figure-float();
+
+  img {
+    width: 100%;
+  }
+}
+
+.float-left {
+  float: left;
+  @include figure-float();
+
+  img {
+    width: 100%;
   }
 }
 
