--- a/test/styles/verse.css
+++ b/test/styles/verse.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!*
 * FILE:     verse.css
-* VERSION:  2017-04-22
+* VERSION:  2017-06-02
 * AUTHOR:   Weston Littrell
 */
 body { font: normal normal 100% "Georgia", "Times New Roman", serif; margin: 0 5%; }
@@ -37,13 +37,15 @@ hr { display: none !important; visibility: hidden; }
 abbr { color: #b26900; cursor: help; }
 .dictterm { color: #000080; font: bold 1.15em "Verdana", "Arial", "Helvetica", sans-serif; text-align: left; text-indent: 0; }
 .esstrongs { color: #006400; font: 0.9em "Verdana", "Arial", "Helvetica", sans-serif; }
-.float-right { float: right; margin: 0.7em 1.1em; max-width: 19em; width: 19em; }
-.float-left { float: left; margin: 0.7em 1.1em; max-width: 19em; width: 19em; }
 .figure { text-align: center; }
 .figcaption { font-size: 0.85em; font-style: italic; font-weight: normal; text-align: center; text-indent: 0; }
 .figcaption .italic, .figcaption .bold-italic { font-style: normal; }
 .full-width { max-width: 555px; width: 90%; margin: 1.2em 5%; }
-.full-width img { margin: 0 5%; }
+.full-width img { margin: 0 5%; width: 100%; }
+.float-right { float: right; margin: 0.7em 1.1em; max-width: 19em; width: 19em; }
+.float-right img { width: 100%; }
+.float-left { float: left; margin: 0.7em 1.1em; max-width: 19em; width: 19em; }
+.float-left img { width: 100%; }
 .scriptext { border: none; font-size: 1em; font-style: italic; margin: 0; padding: 0; }
 .scriptext .italic, .scriptext .bold-italic { font-style: normal; }
 hr, .video, .map, .photo, .illustration, .chart, .table, .audio, .esarticletitle, .espagenumber, .nd { display: none !important; visibility: hidden; }
