--- a/test/styles/paragraph.css
+++ b/test/styles/paragraph.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!*
 * FILE:     paragraph.css
-* VERSION:  2017-06-02
+* VERSION:  2017-06-08
 * AUTHOR:   Weston Littrell
 */
 body { font: normal normal 100% "Georgia", "Times New Roman", serif; margin: 0 5%; }
@@ -116,8 +116,9 @@ hr, .video, .map, .photo, .illustration, .chart, .table, .audio, .esarticletitle
 .scripture, .versemode { display: none !important; visibility: hidden; }
 span.JesusWords { color: red; }
 .wsextra {  font: 1.1em "WS Extra"; font-style: normal; font-weight: normal; }
-.lang, :lang(grc), .lang-grc, .translit {  font-family: "Gentium Plus", "Gentium", "Charis SIL", serif; font-style: italic; }
-.lang .italic, .lang .bold-italic, :lang(grc) .italic, :lang(grc) .bold-italic, .lang-grc .italic, .lang-grc .bold-italic, .translit .italic, .translit .bold-italic { font-style: normal; }
+.lang, .translit {  font-family: "Gentium Plus", "Gentium", "Charis SIL", serif; font-style: italic; }
+.lang .italic, .lang .bold-italic, .translit .italic, .translit .bold-italic { font-style: normal; }
+:lang(grc), .lang-grc {  font-family: "Gentium Plus", "Gentium", "Charis SIL", serif; font-style: normal; font-weight: normal; }
 .lang-hbo, :lang(hbo) {  font-family: "Ezra SIL"; font-style: normal; font-weight: normal; }
 .col-1 { max-width: 8.33%; width: 8.33%; }
 .col-2 { max-width: 16.66%; width: 16.66%; }
