--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -205,7 +205,7 @@ a[data-cross-ref] {
   margin-bottom: -1px;
 }
 
-span[data-cross-context],
+span[data-cross-context~="scripture"],
 .versemode {
   @include no-display();
 }
