--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -221,8 +221,8 @@ span[data-cross-context~="scripture"],
 @import "includes/shared/asides";
 
 aside {
-  &[epub|type~=bridgehead],
-  &[epub\:type~=bridgehead] {
+  p[epub|type~=bridgehead],
+  p[epub\:type~=bridgehead] {
     @include aside-bridge();
   }
 
@@ -438,4 +438,43 @@ $fn-color: #ff0000;
   #OVERRIDES
 \*------------------------------------*/
 
-@import "includes/shared/overrides";
+/*
+ * Media queries
+ */
+
+ @media only screen and (max-width: 600px) {
+  /* Display left and right pull quotes
+     as centered in smaller viewports. */
+  .pullquotel,
+  .pullquoter {
+    @include pullquote-center();
+  }
+
+  /* Display left and right figure floats
+     as centered in smaller viewports. */
+  .float-left,
+  .float-right {
+    @include figure-full();
+  }
+
+  /* Display paragraphs as left-aligned
+     in smaller viewports. */
+  p,
+  li {
+    text-align: left;
+  }
+}
+
+
+/*
+ * <dfn> font override
+ */
+
+dl:not(.abbr-list) {
+  dfn {
+    span[lang],
+    span[trans] {
+      font: inherit;
+    }
+  }
+}
