make changes after first epubcheck test

--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -498,10 +498,10 @@ $fn-color: #ff0000;
 @import 'includes/tachyons/typography';
 @import 'includes/tachyons/poetry';
 @import 'includes/tachyons/utilities';
-@import 'includes/tachyons/visibility';
+//@import 'includes/tachyons/visibility';
 @import 'includes/tachyons/white-space';
 @import 'includes/tachyons/vertical-align';
-@import 'includes/tachyons/hovers';
+//@import 'includes/tachyons/hovers';
 //@import 'includes/tachyons/z-index';
 //@import 'includes/tachyons/nested';
 @import 'includes/tachyons/styles';
