--- a/src/includes/tachyons/_position.scss
+++ b/src/includes/tachyons/_position.scss
@@ -17,28 +17,28 @@
 
 */
 
-.static { position: static; }
+//.static { position: static; }
 .relative  { position: relative; }
-.absolute  { position: absolute; }
-.fixed  { position: fixed; }
+//.absolute  { position: absolute; }
+//.fixed  { position: fixed; }
 
 @media #{$breakpoint-not-small} {
-  .static-ns { position: static; }
+  //.static-ns { position: static; }
   .relative-ns  { position: relative; }
-  .absolute-ns  { position: absolute; }
-  .fixed-ns  { position: fixed; }
+  //.absolute-ns  { position: absolute; }
+  //.fixed-ns  { position: fixed; }
 }
 
 @media #{$breakpoint-medium} {
-  .static-m { position: static; }
+  //.static-m { position: static; }
   .relative-m  { position: relative; }
-  .absolute-m  { position: absolute; }
-  .fixed-m  { position: fixed; }
+  //.absolute-m  { position: absolute; }
+  //.fixed-m  { position: fixed; }
 }
 
 @media #{$breakpoint-large} {
-  .static-l { position: static; }
+  //.static-l { position: static; }
   .relative-l  { position: relative; }
-  .absolute-l  { position: absolute; }
-  .fixed-l  { position: fixed; }
+  //.absolute-l  { position: absolute; }
+  //.fixed-l  { position: fixed; }
 }
